pref: 鸟语稿费哪里吃？

--- a/index.html
+++ b/index.html
@@ -72,52 +72,33 @@
             <!-- 在这里放文章内容 -->
             <p>欢迎合作、意见和建议！</p>
             <div class="center-text" style="border: 2px solid black;border-color: rgb(255, 0, 0);">
-                <h1><del>鸟语稿费<span class="text">县镇</span>吃</del>，人求上进先读书。</h1>
+                <h1><del><span class="text">鸟语稿费县镇吃</span></del>，人求上进先读书。</h1>
                 <!-- 打字效果JS -->
                 <script>
                     // 获取要操作的 .text 标签
                     const text = document.querySelector('.text');
-                    
-                    // 定义要显示的文字数组
+
                     const txt = [
-                        "县镇",
-                        "市里"
+                        "鸟语稿费县镇吃",
+                        "鸟语稿费市里吃",
+                        "鸟语稿费城里吃",
+                        "鸟语稿费哪里吃",
+                        //"鸟欲高飞先振翅",
                     ];
 
-                    // 定义当前正在操作的文字下标和字符下标
-                    let currentIndex = 0;
-                    let charIndex = 0;
-
-                    // 定义打字和删除字的状态，默认为打字状态
-                    let typing = true;
+                    let index = 0; // 初始化索引，用于跟踪当前显示的文本
 
                     // 设置定时器，每200毫秒执行一次
                     setInterval(function() {
-                        if (typing) {
-                            // 正在打字状态，显示当前字符串的前index个字符
-                            text.innerHTML = txt[currentIndex].slice(0, ++charIndex);
-                        } else {
-                            // 正在删除字状态，显示当前字符串的前index个字符
-                            text.innerHTML = txt[currentIndex].slice(0, --charIndex);
+                        // 设置 .text 元素的内容为当前索引对应的文本
+                        text.textContent = txt[index];
+                        
+                        // 索引递增，循环显示数组中的内容
+                        index++;
+                        if (index >= txt.length) {
+                            index = 0; // 如果索引超过数组长度，重置为0，实现循环切换
                         }
-
-                        // 判断打字或删除字是否完成
-                        if (charIndex === txt[currentIndex].length + 3) {
-                            // 打字完成后停留时间较长（1000毫秒），然后切换到删除字状态
-                            setTimeout(function() {
-                                typing = false;
-                            }, 3000);
-                        } else if (charIndex < 0) {
-                            // 删除字完成后切换到下一个字符串的打字状态
-                            typing = true;
-                            charIndex = 0;
-                            currentIndex++;
-                            // 如果当前文字下标超过数组长度，重置为0
-                            if (currentIndex >= txt.length) {
-                                currentIndex = 0;
-                            }
-                        }
-                    }, 200);
+                    }, 1000);
                 </script>
             </div>
         </div>
