--- a/index.html
+++ b/index.html
@@ -72,34 +72,7 @@
             <!-- 在这里放文章内容 -->
             <p>欢迎合作、意见和建议！</p>
             <div class="center-text" style="border: 2px solid black;border-color: rgb(255, 0, 0);">
-                <h1><del><span class="text">鸟语稿费县镇吃</span></del>，人求上进先读书。</h1>
-                <!-- 打字效果JS -->
-                <script>
-                    // 获取要操作的 .text 标签
-                    const text = document.querySelector('.text');
-
-                    const txt = [
-                        "鸟语稿费县镇吃",
-                        "鸟语稿费市里吃",
-                        "鸟语稿费城里吃",
-                        "鸟语稿费哪里吃",
-                        //"鸟欲高飞先振翅",
-                    ];
-
-                    let index = 0; // 初始化索引，用于跟踪当前显示的文本
-
-                    // 设置定时器，每200毫秒执行一次
-                    setInterval(function() {
-                        // 设置 .text 元素的内容为当前索引对应的文本
-                        text.textContent = txt[index];
-                        
-                        // 索引递增，循环显示数组中的内容
-                        index++;
-                        if (index >= txt.length) {
-                            index = 0; // 如果索引超过数组长度，重置为0，实现循环切换
-                        }
-                    }, 1000);
-                </script>
+                <h1>鸟欲高飞先振翅，人求上进先读书。</h1>
             </div>
         </div>
 
