img: 添加一张图片

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 align-items: center;
                 height: 100vh;
                 font-family: Arial, sans-serif;
+                /*滚动条（临时）*/
+                overflow: hidden;
             }
             
             /* 亚克力效果垫底 */
@@ -70,6 +72,9 @@
             </div>
 
             <!-- 在这里放文章内容 -->
+            <div class="center-text">
+                <img src="photos/太极.png" alt="太极" width="30%" height="30%">
+            </div>
             <p>欢迎合作、意见和建议！</p>
             <div class="center-text" style="border: 2px solid black;border-color: rgb(255, 0, 0);">
                 <h1>鸟欲高飞先振翅，人求上进先读书。</h1>
