style: 修改标题样式

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- Code by Duck Studio -->
-<!-- ©鸭鸭「カモ」 (包括图片) -->
+<!-- (c) 鸭鸭「カモ」 (包括图片) -->
+
 <html lang="zh">
     <head>
         <!-- 在这里修改页面标题 -->
@@ -37,17 +38,6 @@
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
             }
 
-            h1 {
-                color: #333;
-                font-size: 40px;
-            }
-
-            h2 {
-                color: #333;
-                font-size: 24px; /* 调整标题文本大小 */
-                margin-bottom: 10px; /* 调整标题与下方段落的间距 */
-            }
-
             img {
                 max-width: 100%;
                 height: auto;
@@ -73,7 +63,7 @@
 
             <!-- 在这里放文章内容 -->
             <div class="center-text">
-                <img src="photos/太极.png" alt="太极" width="30%" height="30%">
+                <img src="assets/pic/太极.png" alt="太极" width="30%" height="30%">
             </div>
             <p>欢迎合作、意见和建议！</p>
             <div class="center-text" style="border: 2px solid black;border-color: rgb(255, 0, 0);">
